--- a/index.html
+++ b/index.html
@@ -55,25 +55,33 @@
 		<div class="Service">
 			<div class="row">
 				<div>
-					<img src="img/service.png" class="img-responsive" alt="print">
+					<div class="Service__image">
+						<img src="img/service.png" class="img-responsive" alt="print">
+					</div>
 					<h3>print design</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore architecto iste, aspernatur sed quidem a ea, modi corrupti beatae ab.</p>
 				</div>
 
 				<div>
-					<img src="img/service2.png" class="img-responsive" alt="monitor">
+					<div class="Service__image">
+						<img src="img/service2.png" class="img-responsive" alt="monitor">
+					</div>
 					<h3>web design</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore architecto iste, aspernatur sed quidem a ea, modib.</p>
 				</div>
 
 				<div>
-					<img src="img/service3.png" class="img-responsive" alt="phone">
+					<div class="Service__image">
+						<img src="img/service3.png" class="img-responsive" alt="phone">
+					</div>
 					<h3>app design</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore architecto iste, aspernatur sed quidem a ea, modi corrupti.</p>
 				</div>
 
 				<div>
-					<img src="img/service4.png" class="img-responsive" alt="logo">
+					<div class="Service__image">
+						<img src="img/service4.png" class="img-responsive" alt="logo">
+					</div>
 					<h3>logo design</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore architecto iste, aspernatur sed quidem a ea, modi corrupti beatae ab.</p>
 				</div>
